# widen-tap-dynamodb

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
tap-dynamodb/: tap-dynamodb.sh
tap-dynamodb/tap_dynamodb/: auth.py
tap-dynamodb/tap_dynamodb/tests/: test_core.py
tap_dynamodb/: client.py  deserialize.py  dynamodb.py  schema.py  streams.py  tap.py
tap_dynamodb/sync_strategies/: full_table.py  log_based.py
tap_dynamodb/tests/: __init__.py
