[tool.poetry]
name = "tap-dynamodb"
version = "0.0.1"
description = "`tap-dynamodb` is a Singer tap for DynamoDB, built with the Meltano SDK for Singer Taps."
authors = ["Josh Lloyd"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.4"
boto3 = "^1.18.21"
atomicwrites = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-dynamodb = 'tap_dynamodb.tap:TapDynamoDB.cli'
